--- a/responsive-web/workspace-setup.html
+++ b/responsive-web/workspace-setup.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Stackroute | Responsive Web</title>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <h1>Responsive Web</h1>
+  <h1>Workspace Setup</h1>
 </body>
 </html>
